blackcountrybot-web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackcountrybot-web-deployment
  labels:
    app: blackcountrybot-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blackcountrybot-web
  template:
    metadata:
      labels:
        app: blackcountrybot-web
    spec:
      containers:
      - name: blackcountrybot-web
        image: tjackadams/blackcountrybot-web:latest
        ports:
          - containerPort: 80
        volumeMounts:
        - name: secrets
          mountPath: /app/secrets
          readOnly: true
        livenessProbe:
          httpGet:
            path: /self
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /ready
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 15
      volumes:
      - name: secrets
        secret:
          secretName: blackcountrybot-secrets
