blackcountrybot-web-service.yml
kind: Service
apiVersion: v1
metadata:
  name: blackcountrybot-web
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
    traefik.ingress.kubernetes.io/session-cookie-name: "blackcountry-cookie"
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: blackcountrybot-web
